--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pawelleszczynski.frontendessentials">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -9,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FrontEndEssentials">
+
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +22,6 @@
         <activity android:name=".SearchActivity"
             android:parentActivityName=".MainActivity">
         </activity>
-        <activity android:name=".MinUnminActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
         <activity android:name=".GraphActivity"
             android:parentActivityName=".MainActivity">
         </activity>
@@ -28,6 +29,8 @@
             android:parentActivityName=".MainActivity">
         </activity>
         <activity android:name=".TemplateActivity"
+            android:parentActivityName=".MainActivity">
+        </activity><activity android:name=".MinActivity"
             android:parentActivityName=".MainActivity">
         </activity>
 
@@ -60,6 +63,11 @@
         </activity>
         <activity android:name=".CalcVwToPx"
             android:parentActivityName=".CalcActivity">
+        </activity>
+        <activity android:name=".MinCSSMin"
+            android:parentActivityName=".MinActivity">
+        </activity><activity android:name=".MinJSMin"
+            android:parentActivityName=".MinActivity">
         </activity>
     </application>
 </manifest>
